	*** RELEASE 7.0.3 ***

2005-09-29  Bruno coudoin  <bruno.coudoin@free.fr>

	Merge of commits from Yves in the 7.1 branch
	Fixes crash in gletters.c, wordsgame.c and algebra.c

	* configure.in:
	* gcompris.spec.in:
	* src/boards/algebra.c: (key_press):
	* src/boards/gletters.c: (gletters_create_item):
	* src/boards/wordsgame.c: (get_wordfile):

2005-09-18  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed gcompris2spip to work with spip 1.8.2

	Commit of XRANDR patch from debian Bug report logs - #310058
	
	* INSTALL:
	* boards/hanoi_real.xml.in:
	* docs/screenshots/memory_tux.jpg:
	* docs/screenshots/memory_tux_small.jpg:
	* docs/screenshots/tuxpaint.jpg:
	* docs/screenshots/tuxpaint_small.jpg:
	* docs/spip_menuboard.xsl:
	* docs/spip_oneboard.xsl:
	* po/Makefile.in.in:
	* src/gcompris/gcompris.c: (init_background), (gcompris_exit),
	(xrandr_init), (xrandr_get_config):
	* src/gcompris/properties.c: (gcompris_properties_save):

2005-09-18  Yves Combe,,,  <yves@ycombe.net>

	try to fix dependances on gtk 2.4 and not 2.6

	* po/Makefile.in.in:
	* src/gcompris/board_config.c: (gcompris_get_active_text),
	(gcompris_combo_box_changed), (gcompris_combo_locales_changed):

2005-09-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Release 7.0.1
	Minor fixes for this release
	
	* boards/flags/ka.png:
	* boards/hanoi_real.xml.in:
	* configure.in:
	* po/Makefile.in.in:
	* po/POTFILES.in:
	* src/boards/hanoi_real.c:

2005-09-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Georgian

	* boards/Makefile.am:
	* boards/flags/gcompris_flags.assetml.in:
	* configure.in:
	* docs/C/gcompris.texi:
	* docs/eu/overview.txt:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:

2005-09-16  Yves Combe,,,  <yves@ycombe.net>

	Add Georgian ka_GE

	* src/gcompris/config.c:

2005-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved images and icons
	Added full activity path/name in the help so that user can run
	gcompris -l activity
	
	* boards/boardicons/algorithm.png: